Added about page

--- a/about.html
+++ b/about.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InnovateTech</title>
+    <title>About Us - InnovateTech</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
         <nav>
-            <img src="images/logo.png" alt="InnovateTech Logo" class="logo">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="product.html">Products</a></li>
@@ -21,8 +20,20 @@
         </nav>
     </header>
     <main>
-        <h1>Welcome to InnovateTech</h1>
-        <p>Your one-stop shop for the latest tech gadgets!</p>
+        <h1>About Us</h1>
+        <section class="about">
+            <img src="images/office.jpeg" alt="Office">
+            <div class="about-text">
+                <blockquote>
+                    "Innovation is the key to success in technology."
+                </blockquote>
+                <p>CEO, InnovateTech</p>
+                <address>
+                    InnovateTech<br>
+                    123 Tech Avenue, Indore, MP, India
+                </address>
+            </div>
+        </section>
     </main>
 </body>
 </html>
