Make changes in folder structure

--- a/product.html
+++ b/product.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products - InnovateTech</title>
+    <title>InnovateTech</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
         <nav>
+            <img src="images/logo.png" alt="InnovateTech Logo" class="logo">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="product.html">Products</a></li>
