--- a/register.html
+++ b/register.html
@@ -10,14 +10,7 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="product.html">Products</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="register.html">Register</a></li>
-                <li><a href="login.html">Login</a></li>
-            </ul>
+            <img src="images/logo.png" alt="InnovateTech Logo" class="logo">
         </nav>
     </header>
     <main>
