--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <h1>Register</h1>
-        <form id="registerForm" action="#" method="post">
+        <form id="registerForm" action="login.html" method="post">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
 
